# SUP

./: CMakeLists.txt  README.md  SUP.cpp
INPUT/: mps_FP2.yaml  mps_cmnist.yaml  mps_iris.yaml  mps_mnist.yaml  ttn_iris.yaml  ttn_mnist.yaml
gnuplot/: plot.gnu
tests/: CMakeLists.txt  testing.hpp
